--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,25 @@
 [build-system]
-requires = ["setuptools", "wheel", "setuptools_scm>=6.2"]
+requires = ["setuptools", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 
 [tool.mypy]
 strict = true
+mypy_path = "$MYPY_CONFIG_FILE_DIR/types"
 
 [tool.isort]
 profile = "black"
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = "D202,D403"
+extend-ignore = "D202,D403,E203"
 max-complexity = 10
 
 [tool.coverage.run]
 branch = true
-command_line = "-m pytest"
+command_line = "-m pytest -v"
+omit = [".tox/*"]
 
 [tool.coverage.report]
 show_missing = true
@@ -33,18 +35,11 @@ envlist = py3{7,8,9,10}
 
 [gh-actions]
 python =
+
     3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
-
-[testenv:flake8]
-deps = flake8
-commands = flake8 .
-
-[testenv:mypy]
-deps = mypy
-commands = mypy .
 
 [testenv]
 deps =
@@ -63,4 +58,5 @@ commands =
     pflake8 .
     coverage run
     coverage report --fail-under=100
+
 """
