--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = psycopg-pool-prometheus
-description = Expose psycopg pool metrics to prometheus.
+description = Exposes the pool stats maintained by psycopg3's connection pool to prometheus.
 long_description = file: README.rst
-license = MIT
+keywords = hacktoberfest prometheus psycopg3
 author = Barnaby Shearer
 author_email = b@zi.is
+repository = "https://github.com/BarnabyShearer/psycopg-pool-prometheus"
 classifiers =
-    Development Status :: 4 - Beta
-    Intended Audience :: Developers
+    Development Status :: 5 - Production/Stable
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
 
@@ -21,3 +21,4 @@ include_package_data = True
 
 [options.package_data]
 * = py.typed
+
