--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,7 @@ install_requires =
     psycopg[pool]
     prometheus_client
 python_requires = >=3.7
-include_package_data = True
 
 [options.package_data]
-* = py.typed
+* = py.typed, *.c, *.h
 
