--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = psycopg-pool-prometheus
-description = Exposes the pool stats maintained by psycopg3's connection pool to prometheus.
+description = Expose metrics maintained by psycopg3's connection pool to prometheus.
 long_description = file: README.rst
 keywords = hacktoberfest prometheus psycopg3
 author = Barnaby Shearer
