--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = psycopg-pool-prometheus
 description = Expose metrics maintained by psycopg3's connection pool to prometheus.
 long_description = file: README.rst
-keywords = hacktoberfest prometheus psycopg3
+keywords = prometheus psycopg3
 author = Barnaby Shearer
 author_email = b@zi.is
 repository = "https://github.com/BarnabyShearer/psycopg-pool-prometheus"
