--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,14 @@ long_description = file: README.rst
 keywords = prometheus psycopg3
 author = Barnaby Shearer
 author_email = b@zi.is
-repository = "https://github.com/BarnabyShearer/psycopg-pool-prometheus"
 classifiers =
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
+project_urls =
+    Source = "https://github.com/BarnabyShearer/psycopg-pool-prometheus"
+    Tracker = "https://github.com/BarnabyShearer/psycopg-pool-prometheus/issues"
+    Documentation = "http://psycopg-pool-prometheus.readthedocs.io/en/latest/"
 
 [options]
 packages = find:
