--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,9 @@ classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
 project_urls =
-    Source = "https://github.com/BarnabyShearer/psycopg-pool-prometheus"
-    Tracker = "https://github.com/BarnabyShearer/psycopg-pool-prometheus/issues"
-    Documentation = "http://psycopg-pool-prometheus.readthedocs.io/en/latest/"
+    Source = https://github.com/BarnabyShearer/psycopg-pool-prometheus
+    Tracker = https://github.com/BarnabyShearer/psycopg-pool-prometheus/issues
+    Documentation = https://psycopg-pool-prometheus.readthedocs.io/en/latest/
 
 [options]
 packages = find:
