--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = psycopg-pool-prometheus
 description = Expose metrics maintained by psycopg3's connection pool to prometheus.
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 keywords = prometheus psycopg3
 author = Barnaby Shearer
 author_email = b@zi.is
